policies/gke/base/asm-gateways/monitoring-ingress/gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: asm-ingressgateway
spec:
  gatewayClassName: istio
  addresses:
  - value: asm-ingressgateway.monitoring-ingress.svc.cluster.local
    type: Hostname
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: monitoring-ssl
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: HTTPRoute
